crates/treebank-typescript/grammar.js
    program: $ => seq(optional($.hash_bang_line), repeat($._statement)),

    _statement: $ => choice(
      $._declaration,
      $._directive,
      $._control_flow,
      $.expression_statement,
      $.variable_declaration,
      $.block,
      $.try_statement,
      $.labeled_statement,
      $.empty_statement,
      $.debugger_statement,
      $.with_statement,
    ),

    _expressions: $ => choice($._expression, $.sequence_expression),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    // Every modifier but `override`: tsc's parser takes `declare var x`,
    // and even `static var x` and `readonly var x`, but `override var x` is
    // `'override' modifier cannot appear on a variable declaration`. Naming
    // the set here is what partitions `_modifier` in this grammar, and is
    // why it is a facet rather than a supertype.
    variable_declaration: $ => seq(
      repeat(choice(
        $.accessibility_modifier,
        $.readonly_modifier,
        $.static_modifier,
        $.abstract_modifier,
        $.declare_modifier,
        $.accessor_modifier,
      )),
      field('kind', choice('var', 'let', 'const')),
      commaSep1($.variable_declarator),
      $._semicolon,
    ),

    variable_declarator: $ => seq(
      field('name', $._pattern),
      optional('!'),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._statement),
      optional(field('alternative', $.else_clause)),
    )),

    switch_statement: $ => seq(
      'switch',
      field('subject', $.parenthesized_expression),
      field('body', $.switch_body),
    ),

    switch_body: $ => seq(
      '{',
      repeat(choice($.case_clause, $.default_clause)),
      '}',
    ),

    case_clause: $ => seq(
      'case',
      field('value', $._expressions),
      ':',
      repeat($._statement),
    ),

    default_clause: $ => seq('default', ':', repeat($._statement)),

    for_in_statement: $ => choice(
      seq(
        'for', '(',
        choice(
          seq(field('kind', choice('var', 'let', 'const')), field('left', $._pattern)),
          field('left', choice($._name, $.member_expression, $.subscript_expression, $.object_pattern, $.array_pattern, $.parenthesized_expression)),
        ),
        field('operator', choice('in', 'of')),
        field('right', $._expressions),
        ')',
        field('body', $._statement),
      ),
      seq(
        'for', 'await', '(',
        choice(
          seq(field('kind', choice('var', 'let', 'const')), field('left', $._pattern)),
          field('left', choice($._name, $.member_expression, $.subscript_expression, $.object_pattern, $.array_pattern, $.parenthesized_expression)),
        ),
        field('operator', 'of'),
        field('right', $._expressions),
        ')',
        field('body', $._statement),
      ),
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._statement),
    ),

    return_statement: $ => seq('return', optional($._expressions), $._semicolon),
    break_statement: $ => seq('break', optional(field('label', $._name)), $._semicolon),
    continue_statement: $ => seq('continue', optional(field('label', $._name)), $._semicolon),
    throw_statement: $ => seq('throw', $._expressions, $._semicolon),

    // A `try` needs a `catch` or a `finally`; `try {}` alone is
    // `Try statement must have a catch or finally clause`.
    _declaration: $ => choice(
      $.function_definition,
      $.class_definition,
      $.interface_definition,
      $.type_alias,
      $.enum_definition,
      $.namespace_definition,
      $.import_alias,
    ),

    _modifier: $ => choice(
      $.accessibility_modifier,
      $.readonly_modifier,
      $.static_modifier,
      $.abstract_modifier,
      $.override_modifier,
      $.declare_modifier,
      $.accessor_modifier,
    ),

    readonly_modifier: _ => prec(1, 'readonly'),
    static_modifier: _ => prec(1, 'static'),
    declare_modifier: _ => prec(1, 'declare'),
    function_definition: $ => choice(
      prec.dynamic(1, prec.right(seq(
        repeat($._attribute),
        repeat($._modifier),
        optional('async'),
        'function',
        optional('*'),
        field('name', $._name),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq(':', field('return_type', $._type))),
        choice(field('body', $._body), $._semicolon),
      ))),
    ),

    // The keyword-less METHOD form, reachable only from class bodies and
    // object literals -- never from statement position. This is the
    // "larger refactor of _declaration" the catch_clause comment promised:
    // with the method form in `function_definition` itself, `foo ( ) { }`
    // was a legal statement (a definition named foo), `catch (e) {}` grew
    // a shadow reading, and requiring the declaration's name made
    // `function ( ) ;` parse as a definition NAMED `function` via keyword
    // fallback. Aliased back to function_definition so consumers see one
    // kind.
    _property_name: $ => choice(
      $._name,
      alias($._reserved_property, $.identifier),
      $.string,
      $.number,
      $.computed_property_name,
      $.private_name,
    ),

    _reserved_property: _ => choice(
      'function', 'class', 'new', 'default', 'import', 'export', 'typeof',
      'void', 'delete', 'in', 'instanceof', 'if', 'else', 'for', 'while',
      'do', 'return', 'switch', 'case', 'catch', 'finally', 'throw', 'try',
      'const', 'var', 'let', 'this', 'super', 'null', 'true', 'false',
      'enum', 'interface', 'extends', 'yield', 'await', 'break', 'continue',
      'debugger', 'with',
    ),

    private_name: $ => seq('#', $.identifier),

    parameters: $ => seq(
      '(',
      optional(seq(commaSep1($._parameter), optional(','))),
      ')',
    ),

    _parameter: $ => choice($.parameter, $.rest_parameter),

    parameter: $ => seq(
      repeat($._attribute),
      repeat($._modifier),
      field('pattern', choice($._pattern, $.this)),
      optional('?'),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    rest_parameter: $ => seq(
      '...',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
    ),

    // The name is REQUIRED here, for the reason `function_definition`
    // records one rule up: a class DECLARATION must have one. `class { }`
    // is not a program -- V8 says `Unexpected token '{'` and tsc says
    // TS1211, "a class declaration without the 'default' modifier must
    // have a name" -- and with the name optional this rule was the
    // javascript fuzzer's whole undeclared surface, 615 widenings across
    // `class { }` and `class { } ;`.
    //
    // Only the javascript leg could see it. TS1211 is raised by tsc's
    // grammar CHECK, not its parser, so `ts.createSourceFile` returns no
    // parseDiagnostics and the typescript oracle -- which reads exactly
    // those -- calls the program valid. The two dialects share this
    // grammar; the sharper reference parser is the one that judges it.
    //
    // The anonymous form is `_anonymous_class` below, in the expression
    // tier and nowhere else.
    class_definition: $ => prec.dynamic(1, prec.right(seq(
      repeat($._attribute),
      repeat($._modifier),
      'class',
      field('name', $._name),
      field('type_parameters', optional($.type_parameters)),
      optional($.class_heritage),
      field('body', $.class_body),
    ))),

    // A class with NO name: `const C = class { }`, `new (class { })()`.
    // It carries no name slot at all, which is what keeps it disjoint from
    // `class_definition` -- the same shape that lets `_default_function`
    // sit beside `function_definition`. Aliased back so consumers see one
    // kind; the tree is the one this grammar always produced.
    //
    // `export default class { }` -- ClassDeclaration with [+Default], the
    // one declaration position the language allows an anonymous class --
    // reaches it through `export default <expression>` and ASI, and that
    // is why there is no `export default` alternative here to match
    // `_default_function`'s. Writing one makes `export default
    // _anonymous_class . ';'` reduce two ways, to `export_statement`
    // directly or to `_expression` first, and no precedence separates
    // them. `_default_function` has no such twin because the expression
    // tier's anonymous function is a DIFFERENT symbol, `function_expression`.
    class_heritage: $ => repeat1(choice(
      seq('extends', field('value', choice(
        seq($._expression, field('type_arguments', optional($.type_arguments))),
        $.generic_type,
      ))),
      seq('implements', commaSep1($._type)),
    )),

    class_body: $ => seq(
      '{',
      repeat(choice($._member, ';')),
      '}',
    ),

    // Members route through _declaration (the python/rust precedent), so a
    // method answers (_declaration) as well as (_member).
    _member: $ => choice(
      $._declaration,
      alias($._method_definition, $.function_definition),
      $.field_definition,
      $.index_signature,
      $.static_block,
    ),

    field_definition: $ => seq(
      repeat($._attribute),
      repeat($._modifier),
      field('name', $._property_name),
      optional(choice('?', '!')),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      $._semicolon,
    ),

    index_signature: $ => seq(
      repeat($._modifier),
      '[',
      field('name', $._name),
      ':',
      field('index_type', $._type),
      ']',
      optional(choice('?', seq(':', field('type', $._type)))),
      optional($._semicolon),
    ),

    interface_definition: $ => seq(
      repeat($._modifier),
      'interface',
      field('name', $._name),
      field('type_parameters', optional($.type_parameters)),
      optional(seq('extends', commaSep1($._type))),
      field('body', $.object_type),
    ),

    type_alias: $ => seq(
      repeat($._modifier),
      'type',
      field('name', $._name),
      field('type_parameters', optional($.type_parameters)),
      '=',
      field('value', $._type),
      $._semicolon,
    ),

    import_statement: $ => seq(
      'import',
      optional(choice('type', 'typeof')),
      choice(
        seq($.import_clause, 'from', field('source', $.string)),
        field('source', $.string),
      ),
      optional($.import_attribute),
      $._semicolon,
    ),

    import_clause: $ => choice(
      $.namespace_import,
      $.named_imports,
      seq(
        field('default', $._name),
        optional(seq(',', choice($.namespace_import, $.named_imports))),
      ),
    ),

    named_imports: $ => seq(
      '{',
      optional(seq(commaSep1($.import_specifier), optional(','))),
      '}',
    ),

    import_specifier: $ => seq(
      optional(choice('type', 'typeof')),
      field('name', choice($._name, $.string)),
      optional(seq('as', field('alias', $._name))),
    ),

    export_statement: $ => choice(
      seq('export', optional('type'), $.export_clause, optional(seq('from', field('source', $.string))), $._semicolon),
      seq('export', optional('type'), '*', optional(seq('as', field('alias', $._name))), 'from', field('source', $.string), $._semicolon),
      seq('export', optional('default'), $._declaration),
      seq('export', 'default', alias($._default_function, $.function_definition)),
      seq('export', 'default', $._expression, $._semicolon),
      seq('export', $.variable_declaration),
      seq('export', '=', $._expression, $._semicolon),
      seq('export', 'as', 'namespace', $._name, $._semicolon),
    ),

    _attribute: $ => choice($.decorator),

    _expression: $ => choice(
      $._invocation,
      $._access,
      $._assignment,
      $._literal,
      $.template_string,
      $._name,
      $.object,
      $.array,
      $.arrow_function,
      $.function_expression,
      $.class_definition,
      alias($._anonymous_class, $.class_definition),
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.conditional_expression,
      $.await_expression,
      $.yield_expression,
      $.as_expression,
      $.satisfies_expression,
      $.non_null_expression,
      $.parenthesized_expression,
      $.this,
      $.super,
      $.import_expression,
      $.import_meta,
      $.new_target,
      $.jsx_element,
      $.jsx_self_closing_element,
      $.jsx_fragment,
    ),

    this: _ => 'this',
    unary_expression: $ => prec.right(PREC.unary, seq(
      field('operator', choice('!', '~', '-', '+', 'typeof', 'void', 'delete')),
      field('operand', $._expression),
    )),

    call_expression: $ => choice(
      prec(PREC.call, seq(
        field('function', $._expression),
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
      prec(PREC.member, seq(
        field('function', $._expression),
        '?.',
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
      prec(PREC.member, seq(
        field('function', $._expression),
        field('arguments', $.template_string),
      )),
    ),

    // `new` takes a MEMBER expression, never a CALL. JavaScript binds
    // `new Date().getFullYear()` as `(new Date()).getFullYear()`, and with
    // `$._expression` as the constructor we bound it as
    // `new (Date().getFullYear())` -- a completely different program, in ~29
    // corpus files, parsing without an error. The sweep cannot see this; the
    // shape check found it, because tsc has a `NewExpression` spanning
    // `new Date()` and we had no node with that span.
    //
    // Precedence cannot express it: `member` must still bind INTO the
    // constructor (`new a.b.C()`) while `call` must not, and one number
    // cannot say both. So the constructor gets its own tier -- the member
    // chain over a primary expression, which is exactly the spec's
    // MemberExpression.
    new_expression: $ => prec.right(PREC.new_no_args, seq(
      'new',
      field('constructor', $._constructable),
      field('type_arguments', optional($.type_arguments)),
      field('arguments', optional($.arguments)),
    )),

    _constructable: $ => choice(
      $._constructable_primary,
      alias($._constructable_member, $.member_expression),
      alias($._constructable_subscript, $.subscript_expression),
      // `new WebSocketCtor!(url)` -- the `!` asserts the CONSTRUCTOR is
      // non-null, so it belongs inside `new`, and the arguments belong to
      // `new`. Without this the constructor tier stopped at the `!` and the
      // call came out as `(new WebSocketCtor!)(url)`.
      alias($._constructable_non_null, $.non_null_expression),
    ),

    // Above `new_no_args` (18), or the `new` reduces at the `!` and the
    // assertion lands OUTSIDE: `(new WebSocketCtor!)(url)` instead of
    // `new (WebSocketCtor!)(url)`.
    arguments: $ => seq(
      '(',
      optional(seq(commaSep1($._argument), optional(','))),
      ')',
    ),

    _argument: $ => choice($._expression, $.spread_element),

    spread_element: $ => seq('...', $._expression),

    member_expression: $ => prec(PREC.member, seq(
      field('object', $._expression),
      field('operator', choice('.', '?.')),
      field('property', choice($._name, alias($._reserved_property, $.identifier), $.private_name)),
    )),

    _body: $ => choice($.block),

    block: $ => prec(1, seq('{', repeat($._statement), '}')),

    jsx_closing_element: $ => seq('<', '/', optional(field('name', $._jsx_element_name)), '>'),
