crates/treebank-typescript/test/corpus/statements.txt
================================================================================
declarations and asi
================================================================================

import fs, { readFile as rf } from "fs"
const a = 1
let b = fn()
  .then(x => x)
export default class Service<T> extends Base implements I {
    #count = 0;
    static create() { return new Service() }
    get count(): number { return this.#count }
}
export type Alias<T> = T[]

--------------------------------------------------------------------------------

(program
  (import_statement
    (import_clause
      default: (identifier)
      (named_imports
        (import_specifier
          name: (identifier)
          alias: (identifier))))
    source: (string))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      value: (number)))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      value: (call_expression
        function: (member_expression
          object: (call_expression
            function: (identifier)
            arguments: (arguments))
          property: (identifier))
        arguments: (arguments
          (arrow_function
            parameter: (identifier)
            body: (identifier))))))
  (export_statement
    (class_definition
      name: (identifier)
      type_parameters: (type_parameters
        (type_parameter
          name: (type_identifier)))
      (class_heritage
        (identifier)
        (type_identifier))
      body: (class_body
        (field_definition
          name: (private_name
            (identifier))
          value: (number))
        (function_definition
          (static_modifier)
          name: (identifier)
          parameters: (parameters)
          body: (block
            (return_statement
              (new_expression
                constructor: (call_expression
                  function: (identifier)
                  arguments: (arguments))))))
        (function_definition
          name: (identifier)
          parameters: (parameters)
          return_type: (type_identifier)
          body: (block
            (return_statement
              (member_expression
                object: (this)
                property: (private_name
                  (identifier)))))))))
  (export_statement
    (type_alias
      name: (identifier)
      type_parameters: (type_parameters
        (type_parameter
          name: (type_identifier)))
      value: (array_type
        (type_identifier)))))

================================================================================
control flow and jsx
================================================================================

function render(items: Item[]) {
    for (const it of items) {
        if (!it.ok) continue
    }
    while (busy) { break }
    switch (kind) {
        case "a": return 1
        default: throw new Error("bad")
    }
    return <div id="root">{items.map(i => <Row {...i} />)}</div>
}

--------------------------------------------------------------------------------

(program
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (array_type
          (type_identifier))))
    body: (block
      (for_in_statement
        left: (identifier)
        right: (identifier)
        body: (block
          (if_statement
            condition: (parenthesized_expression
              (unary_expression
                operand: (member_expression
                  object: (identifier)
                  property: (identifier))))
            consequence: (continue_statement))))
      (while_statement
        condition: (parenthesized_expression
          (identifier))
        body: (block
          (break_statement)))
      (switch_statement
        subject: (parenthesized_expression
          (identifier))
        body: (switch_body
          (case_clause
            value: (string)
            (return_statement
              (number)))
          (default_clause
            (throw_statement
              (new_expression
                constructor: (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (string))))))))
      (return_statement
        (jsx_element
          open_tag: (jsx_opening_element
            name: (identifier)
            (jsx_attribute
              name: (identifier)
              value: (string)))
          (jsx_expression
            (call_expression
              function: (member_expression
                object: (identifier)
                property: (identifier))
              arguments: (arguments
                (arrow_function
                  parameter: (identifier)
                  body: (jsx_self_closing_element
                    name: (identifier)
                    (jsx_expression
                      (spread_element
                        (identifier))))))))
          close_tag: (jsx_closing_element
            name: (identifier)))))))

================================================================================
types
================================================================================

type R<T> = T extends Promise<infer U extends object> ? U : never
type M<T> = { readonly [K in keyof T]-?: T[K] }
type F = (a: string, ...rest: number[]) => void
interface I { a?: number; [k: string]: unknown }
declare const env: `prefix-${string}`

--------------------------------------------------------------------------------

(program
  (type_alias
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    value: (conditional_type
      left: (type_identifier)
      right: (generic_type
        type: (type_identifier)
        type_arguments: (type_arguments
          (infer_type
            (type_identifier)
            (type_identifier))))
      consequence: (type_identifier)
      alternative: (type_identifier)))
  (type_alias
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    value: (mapped_type
      (readonly_modifier)
      (type_identifier)
      keys: (type_operator
        (type_identifier))
      type: (indexed_access_type
        object: (type_identifier)
        index: (type_identifier))))
  (type_alias
    name: (identifier)
    value: (function_type
      parameters: (parameters
        (parameter
          pattern: (identifier)
          type: (type_identifier))
        (rest_parameter
          pattern: (identifier)
          type: (array_type
            (type_identifier))))
      return_type: (type_identifier)))
  (interface_definition
    name: (identifier)
    body: (object_type
      (property_signature
        name: (identifier)
        type: (type_identifier))
      (index_signature
        name: (identifier)
        index_type: (type_identifier)
        type: (type_identifier))))
  (variable_declaration
    (declare_modifier)
    (variable_declarator
      name: (identifier)
      type: (template_literal_type
        (string_content)
        (template_substitution
          (type_identifier))))))
